# qtools

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: README.zh-TW.md
scripts/: fetch_all.py
src/qtools/: cli.py
src/qtools/backtest/: __init__.py  costs.py  engine.py  portfolio.py
src/qtools/data/: __init__.py  _util.py  cache.py
src/qtools/data/loaders/: crypto.py  twse.py  us.py
src/qtools/metrics/: __init__.py  factor.py  performance.py  plots.py
src/qtools/utils/: dates.py
tests/: test_cache.py  test_cli.py  test_dates.py  test_engine.py  test_factor.py  test_loaders_schema.py  test_performance.py  test_portfolio.py  test_smoke.py
